--- a/templates/nav.html
+++ b/templates/nav.html
@@ -5,7 +5,7 @@
         <nav id="navbar">
             <div id="nav-wrapper" class="nav-wrapper">
                 <a href="{{url_for('show_index')}}" id="navbar-logo" class="brand-logo">Hit the Slopes!</a>
-                <a href="#" data-activates="mobile-demo" data-target="mobile-demo" class="sidenav-trigger button-collapse"><i class="material-icons">menu</i></a>
+                <a href="#" data-activates="mobile-demo" data-target="mobile-demo" class="sidenav-trigger button-collapse"><i id="menu-burger" class="material-icons">menu</i></a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
                         <li><a href="{{url_for('trips')}}">Trips</a></li>
                         <li><a href="{{url_for('add_trip')}}">New Trip</a></li>
