Changed ski/snowboard into select menu in edit_trip.html

--- a/templates/edit_skiresort.html
+++ b/templates/edit_skiresort.html
@@ -39,7 +39,7 @@
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">face</i>
                                     <select value="{{skiresort.thumbnail}}" class="validate" id="thumbnail" name="thumbnail" required aria-required="true">
-                                        <option value="" disabled selected>Choose a Thumbnail</option>
+                                        <option value="{{skiresort.thumbnail}}" disabled selected>{{skiresort.thumbnail}}</option>
                                         <option value="/static/img/resorts_thumbs/mountain01.png" data-icon="/static/img/resorts_thumbs/mountain01.png">Peak</option>
                                         <option value="/static/img/resorts_thumbs/mountain02.png" data-icon="/static/img/resorts_thumbs/mountain02.png">Glacier</option>
                                         <option value="/static/img/resorts_thumbs/mountain03.png" data-icon="/static/img/resorts_thumbs/mountain03.png">Map</option>
