--- a/templates/edit_skiresort.html
+++ b/templates/edit_skiresort.html
@@ -62,7 +62,7 @@
                                     </select>
                                     
                                 </div>                            
-                            <button class="btn-small waves-effect right" type="submit">Save</button>
+                            <button class="btns btn-small waves-effect right" type="submit">Save</button>
                             <a href="{{ url_for('ski_resorts') }}" class="btn-small waves-effect right">Cancel</a>
                         </form>
                     </div>
