--- a/templates/edit_trip.html
+++ b/templates/edit_trip.html
@@ -49,7 +49,7 @@
                             <i class="small material-icons prefix">comment</i>
                             <input value="{{trip.other_info}}" id="other_info" name="other_info" type="text" class="validate" required>
                         </div>                   
-                        <button class="btn-small waves-effect right" type="submit">Save</button>
+                        <button class="btns btn-small waves-effect right" type="submit">Save</button>
                         <a href="{{ url_for('trips') }}" class="btn-small waves-effect right">Cancel</a>
                     </form>
                 </div>
