--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -58,12 +58,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            <a href="{{url_for('edit_skiresort', skiresort_id=skiresort._id)}}" class="waves-effect waves-light btn-small">
-                                <i class="material-icons right">playlist_add</i>Edit
-                            </a>
-                            <a href="{{url_for('delete_skiresort', skiresort_id=skiresort._id)}}" class="waves-effect waves-light btn-small">
-                                <i class="material-icons right">delete_forever</i>Delete
-                            </a>
+                            <a href="{{url_for('edit_skiresort', skiresort_id=skiresort._id)}}" class="waves-effect waves-light btn-small">Edit</a>
+                            <a href="{{url_for('delete_skiresort', skiresort_id=skiresort._id)}}" class="waves-effect waves-light btn-small">Delete</a>
                         </div>
                     </div> 
 
