--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
     </div>
 
     <!-- Footer trigger button -->
-    <a href="#footer-modal" class="btn-floating btn-small waves-effect waves-light blue right modal-trigger"><i class="material-icons">copyright</i></a>
+    <a id="footer-btn" href="#footer-modal" class="btn-floating btn-small waves-effect waves-light blue right modal-trigger"><i class="material-icons">copyright</i></a>
     <!-- Footer modal -->
     <div id="footer-modal" class="modal card">
         <div id="footer-content" class="card-content">
