Changed footer image

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
         <div id="footer-content" class="card-content">
             <div id="footer-panel" class="row card-panel">
                 <div class="center">
-                    <img id="footer-img" class="vertical-aligned" src="{{url_for('static', filename='img/avatar/skier.png')}}" alt="Hit the Slopes!">
+                    <img id="footer-img" class="vertical-aligned" src="{{url_for('static', filename='img/info_img.jpg')}}" alt="Hit the Slopes!">
                 </div>
                 <div class="footer-box">
                     <p id="footer-title" class="vertical-aligned center">Hit the Slopes!</p>
