Updated users' profile modal

--- a/templates/trips.html
+++ b/templates/trips.html
@@ -52,8 +52,10 @@
                                 <p>{{user.ageRange}}</p>
                                 <p>{{user.from}}</p>
                             </div>
-                            <div class="col s12 m4 l4 xl4 center">
+                            <div class="col s12 m4 l4 xl4">
+                                <p class="text-center"><i class="fas fa-address-card"></i></p>
                                 <p><a href="#">Contact Me</a></p>
+                                
                             </div> 
                         </div>                   
                     </div>
