--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -10,8 +10,8 @@
                 <input type="text" name="query" id="query" class="validate" required>
             </div>
             <div class="row col s12 m4">
-                <a href="{{ url_for('ski_resorts') }}" class="red btn text-shadow">Reset</a>
-                <button type="submit" class="light-blue btn text-shadow">Search</button>
+                <a href="{{ url_for('ski_resorts') }}" class="search-btn red btn text-shadow">Reset</a>
+                <button type="submit" class="search-btn light-blue btn text-shadow">Search</button>
             </div>
         </div>
     </form>
