Moved footer into a separate template

--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -58,8 +58,8 @@
                             </div>
                         </div>
                         <div class="row">
-                            <a href="{{url_for('edit_skiresort', skiresort_id=skiresort._id)}}" class="waves-effect waves-light btn-small">Edit</a>
-                            <a href="{{url_for('delete_skiresort', skiresort_id=skiresort._id)}}" class="waves-effect waves-light btn-small">Delete</a>
+                            <a href="{{url_for('edit_skiresort', skiresort_id=skiresort._id)}}" class="invisible waves-effect waves-light btn-small">Edit</a>
+                            <a href="{{url_for('delete_skiresort', skiresort_id=skiresort._id)}}" class="invisible waves-effect waves-light btn-small">Delete</a>
                         </div>
                     </div> 
 
