--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,10 @@ body{
     background-attachment: fixed;
 }
 
+.invisible{
+    display: none;
+}
+
 /* Index page intro text with icons */
 .fa, .fas{
     font-size: 24px;
