--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -23,46 +23,51 @@
         <tr>
             <td class="td">
                 <div class="card ski-resort-card">
-                    <div class="card-content row">
-                        <div class="col s4 m4 l4">
-                            <div class="row">
-                            <span class="location-name teal"><h5 class="card-title">{{skiresort.location_name}}</h5></span>  
-                            </div>
-                            <div id="thumbnail-div" class="row">
-                                <img src="{{skiresort.thumbnail}}" width="40" height="40"/>
-                            </div>
-                            <div class="row">
-                                <p>{{skiresort.description}}</p>
+                    <div class="card-content ski-resort-content row">
+                        <div class="col s12 m5 l5">
+                            <div class="row"> 
+                                <div class="col s6 m6 l6">
+                                    <span class="location-name"><h5 class="card-title">{{skiresort.location_name}}</h5></span>  
+                                    <p class="skiresort-description">{{skiresort.description}}</p>
+                                </div>
+                                <div class="col s6 m6 l6 thumbnail-div">
+                                    <img class="thumbnail" src="{{skiresort.thumbnail}}" width="85" height="85"/>
+                                </div>
                             </div>
                         </div>
-                        <div class="col s4 m4 l4">
-                            <div class="">
-                                <div class="row">
-                                <p>Night skiing: {{skiresort.night}}</p>
-                            </div>
+                        <div class="col s6 m3 l3">
                             <div class="row">
-                                <p>Glacier: {{skiresort.glacier}}</p>
-                            </div>
+                                <div class="col s12 m12 l12">
+                                    <p>Night skiing: {{skiresort.night}}</p>
+                                </div>
+                                <div class="col s12 m12 l12">
+                                    <p>Glacier: {{skiresort.glacier}}</p>
+                                </div>
                             </div>
                             <div class="">
                                 <a href="{{skiresort.website}}" target="_blank">Web</a>
                                 <a href="{{skiresort.map}}" target="_blank">Map</a>
                             </div>
                         </div>
-                        <div class="col s4 m4 l4">
-                            <div class="">
-                                <p>Additional info:</p>
-                            </div>
-                            <div class="">
-                                <p>{{skiresort.other_info}}</p>
+                        <div class="col s6 m4 l4">
+                            <div class="row">    
+                                <div class="col">
+                                    <p>Additional info:</p>
+                                </div>
+                                <div class="col">
+                                    <p>{{skiresort.other_info}}</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <a href="{{url_for('edit_skiresort', skiresort_id=skiresort._id)}}" class="invisible waves-effect waves-light btn-small">Edit</a>
-                            <a href="{{url_for('delete_skiresort', skiresort_id=skiresort._id)}}" class="invisible waves-effect waves-light btn-small">Delete</a>
+                    </div>
+                    <div class="row">
+                        <div class="col s6 m8 l8">
+                        </div>
+                        <div class="col s6 m4 l4">
+                            <a href="{{url_for('edit_skiresort', skiresort_id=skiresort._id)}}" class=" invisible waves-effect waves-light btn-small right">Edit</a>
+                            <a href="{{url_for('delete_skiresort', skiresort_id=skiresort._id)}}" class=" invisible waves-effect waves-light btn-small right">Delete</a>
                         </div>
                     </div> 
-
                 </div>
             </td>
         </tr>   
