--- a/static/css/style.css
+++ b/static/css/style.css
@@ -185,15 +185,15 @@ body{
 
 .skiresort-description{
     color: #0056B2;
+    font-size: 1.1em;
+    font-weight: 500;
 }
 
 .thumbnail-div{
     padding: auto;
-    position: relative;
 }
 
 .thumbnail{
-    
     display: block;
     margin-left: auto;
     margin-right: auto;
