--- a/templates/trips.html
+++ b/templates/trips.html
@@ -29,11 +29,13 @@
 </div>
 <div class="row panel">
     <div class="card">
-        <table class="collapsible highlight" data-collapsible="accordion">
+        <table>
+        {% for trip in trips %}  
             <tbody>
-            {% for trip in trips %}                
-            <tr class="collapsible-header col s12 m6 l6 xl6">
+                          
+            <tr>
                 <td>
+                <div class="col s6 m3 l3 xl3">
                 {% for user in users %}
                     {% if trip.user|lower == user.name|lower %}
                     <a href="#{{user.name}}" data-target="#{{user.name}}" data-tool-tip="See profile" class="modal-trigger"><strong>{{user.name}}</strong></a>
@@ -62,8 +64,8 @@
                     {% break %}
                     {% endif %}
                 {% endfor %}          
-                </td>
-                <td>
+                </div>
+                <div class="col s6 m3 l3 xl3">
                     <a href="{{ url_for('ski_resorts')}}" data-tool-tip="See Ski Resorts"><strong>{{trip.location_name}}</strong>
                     <div class="avatar-image center">
                         {% for skiresort in skiresorts %}
@@ -74,33 +76,33 @@
                         {% endfor %} 
                     </div>
                     </a>
-                </td>
-                <td>
+                </div>
+                <div class="col s6 m3 l3 xl3">
                     <p class="center">From: <strong> {{trip.from}}</strong></p>
                     <p class="center">To: <strong> {{trip.to}}</strong></p>
-                </td>  
-            </tr>
-            <tr class="collapsible-header col s12 m6 l6 xl6">
-                <td>
-                    <strong>Adults:</strong>{{trip.adults}}
-                    <strong>Kids:</strong>{{trip.kids}}
-                </td>
-                <td>
-                    <span>{{trip.ski_snowboard}}</span>
-                </td>
-                <td>
-                    <strong>Add.info:</strong>{{trip.other_info}}
-                </td>  
-                <td>          
-                    <div class="row">
-                        <a href="{{url_for('edit_trip', trip_id=trip._id)}}" class="invisible blue accent-2 btn-small waves-effect ">Edit</a>
-                        <a href="{{url_for('delete_trip', trip_id=trip._id)}}" class="invisible red lighten-3 btn-small waves-effect waves-light">Delete</a>
+                </div>  
+                <div class="col s6 m3 l3 xl3">
+                    <div>
+                        <strong>Adults:</strong>{{trip.adults}}
+                        <strong>Kids:</strong>{{trip.kids}}
+                    </div>
+                    <div>
+                        <span>{{trip.ski_snowboard}}</span>
+                    </div>
+                    <div>
+                        <strong>Add.info:</strong>{{trip.other_info}}
+                    </div>  
+                    <div>          
+                        <div class="row">
+                            <a href="{{url_for('edit_trip', trip_id=trip._id)}}" class="invisible blue accent-2 btn-small waves-effect ">Edit</a>
+                            <a href="{{url_for('delete_trip', trip_id=trip._id)}}" class="invisible red lighten-3 btn-small waves-effect waves-light">Delete</a>
+                        </div>
+                    </div>
                     </div>
                 </td>
             </tr>         
-            
-            {% endfor %}   
             </tbody>
+            {% endfor %}   
         </table>                              
     </div>
 </div>
