Refactored edit_skiresort route

--- a/templates/edit_skiresort.html
+++ b/templates/edit_skiresort.html
@@ -30,7 +30,7 @@
                                         <option value="{{skiresort.glacier}}" disabled selected>Glacier: {{skiresort.glacier}}</option>
                                         <option value="yes">Yes</option>
                                         <option value="no">No</option>
-                            </select>
+                                    </select>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">brightness_3</i>
@@ -47,7 +47,7 @@
                                 <div class="input-field col s12 m12 l6">
                                     <img class="center" src="{{skiresort.thumbnail}}" width="30" height="30"/>
                                     <!--<i class="material-icons prefix">face</i>--> 
-                                    <select value="{{skiresort.thumbnail}}" class="validate" id="thumbnail" name="thumbnail" required aria-required="true">
+                                    <select class="validate" id="thumbnail" name="thumbnail" required aria-required="true">
                                         <option value="{{skiresort.thumbnail}}" disabled selected>Update thumbnail</option>
                                         <option value="/static/img/resorts_thumbs/mountain01.png" data-icon="/static/img/resorts_thumbs/mountain01.png">Peak</option>
                                         <option value="/static/img/resorts_thumbs/mountain02.png" data-icon="/static/img/resorts_thumbs/mountain02.png">Glacier</option>
