--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -29,7 +29,7 @@
                                 <div class="col s6 m6 l6">
                                     <span class="location-name card-title"><h5>{{skiresort.location_name}}</h5></span>  
                                     <span class=""><p class="skiresort-description">{{skiresort.description}}</p>
-                                </div></span>
+                               </span> </div>
                                 <div class="col s6 m6 l6 thumbnail-div">
                                     <img class="thumbnail" src="{{skiresort.thumbnail}}" width="85" height="85"/>
                                 </div>
@@ -68,7 +68,7 @@
                         <div class="col s6 m8 l8">
                         </div>
                         <div class="col s6 m4 l4">
-                            <a href="{{url_for('edit_skiresort', skiresort_id=skiresort._id)}}" class=" invisible waves-effect waves-light btn-small right">Edit</a>
+                            <a href="{{url_for('edit_skiresort', skiresort_id=skiresort._id)}}" class="waves-effect waves-light btn-small right">Edit</a>
                             <a href="{{url_for('delete_skiresort', skiresort_id=skiresort._id)}}" class=" invisible waves-effect waves-light btn-small right">Delete</a>
                         </div>
                     </div> 
