--- a/templates/footer.html
+++ b/templates/footer.html
@@ -13,7 +13,7 @@
                     <p id="footer-title" class="vertical-aligned center">Hit the Slopes!</p>
                 </div>
                 <div class="footer-box">
-                    <p id="footer-text" class="vertical-aligned center">Designed & Developed</p>
+                    <p id="footer-text" class="vertical-aligned center">Designed | Developed</p>
                 </div>
                 <div class="footer-box">
                     <a class="vertical-aligned center" href="https://github.com/OlekSt?tab=repositories" target="_blank" title="My Github profile">
