--- a/templates/trips.html
+++ b/templates/trips.html
@@ -19,11 +19,12 @@
                     <input placeholder="date to" type="text" name="query_to" id="query_to" class="validate datepicker">
                 </div>
             </div>
-            <div class="col s3 m2">
-            <div class="row">
-                <a href="{{ url_for('trips') }}" class="search-btn red btn text-shadow">Reset</a>
-                <button type="submit" class="search-btn light-blue btn text-shadow">Search</button>
-            </div></div>
+            <div id="search-btn-box" class="col s3 m2">
+                <div class="row">
+                    <a href="{{ url_for('trips') }}" class="search-btn red btn text-shadow">Reset</a>
+                    <button type="submit" class="search-btn light-blue btn text-shadow">Search</button>
+                </div>
+            </div>
         </div>
     </form>
 </div>
